SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.7.1 - not yet released
* replay
  - fix crash replaying an IGC file with no B record extensions (#3107)
* data files
  - save the previous log file in "xcsoar-old.log"
* user interface
  - new translation: Lithuanian
* Android
  - fix crash in "credits" dialog on Android 4 (#3106)
  - work around Vivante GPU texture bugs (#1995, #2228, #2990, #2998, #3105)
* Kobo
  - fix passphrase entry in WiFi setup (#3053)

Version 6.7 - 2013/09/30
* new target: Kobo e-book readers
* user interface
  - resizable main window
  - added AutoZoom gesture (up-down)
  - obsolete configuration pages "devices", "polar", "logger info" removed
  - new page: "horizon" (#1592)
  - default page gesture changed right/left sense according to other xc ui interaction pattern
  - pressing the Escape key in task manager switches to "Close" tab (#2877)
  - separate font for dialogs (#723, #2806)
  - repetitive airspace warning sound (#2952)
  - never close dialogs due to display rotation
  - disable custom fonts on Altair
  - improve small dialog font on Altair
  - fix loading translations on Linux (#2041)
* map
  - terrain countour lines (#2451)
  - continue loading terrain/topography without GPS fix (#2723)
  - suppress drawing duplicate topography labels
  - draw projected path when turning
  - additional zoom levels (#3037)
  - global "don't fill airspace" setting (#3047)
  - fix rendering errors when some airspaces have no border (#3045)
  - fix distinct page zoom in conjunction with circling zoom (#2907)
* infoboxes
  - new content "Speed task last hour"
  - new content "Next distance (nominal)"
  - new content "Takeoff distance" (#3059)
  - new panel for "Team code" provides quick access to team code settings (#2899)
  - new content "OLC speed" (#2352)
* tasks
  - custom "start requires arm" setting (#2782)
  - new option to disable OLC optimisation